# home-library-bot

./: .editorconfig  README.md  main.py  pyproject.toml  ruff.toml
agent/: contract.md  task_router.yaml
agent/prompts/: mega_prompt.md  search_templates.md
book_bot/: Dockerfile  __init__.py  podman-compose.yml  prompt.txt  redis.conf  requirements.txt  telegram_bot_with_db.py
catalog/companies/: fastapi__batch_1.jsonl  fastapi__batch_2.jsonl  huggingface__batch_1.jsonl  huggingface__batch_2.jsonl  mlflow__batch_1.jsonl  mlflow__batch_2.jsonl  numpy__batch_1.jsonl  numpy__batch_2.jsonl  python-core__batch_1.jsonl  python-core__batch_2.jsonl  pytorch__batch_1.jsonl  pytorch__batch_2.jsonl
catalog/indices/: main.jsonl  summary.json  summary__fastapi__batch_1.json  summary__fastapi__batch_2.json  summary__huggingface__batch_1.json  summary__huggingface__batch_2.json  summary__mlflow__batch_1.json  summary__mlflow__batch_2.json  summary__numpy__batch_1.json  summary__numpy__batch_2.json  summary__python-core__batch_1.json  summary__python-core__batch_2.json  summary__pytorch__batch_1.json  summary__pytorch__batch_2.json
catalog/people/: fastapi__batch_1.jsonl  fastapi__batch_2.jsonl  huggingface__batch_1.jsonl  huggingface__batch_2.jsonl  mlflow__batch_1.jsonl  mlflow__batch_2.jsonl  numpy__batch_1.jsonl  numpy__batch_2.jsonl  python-core__batch_1.jsonl  python-core__batch_2.jsonl  pytorch__batch_1.jsonl  pytorch__batch_2.jsonl
schemas/: entity.schema.json  summary.schema.json
scripts/: merge_indices.py  validate.py
tests/: test_bot.py
(+24 files in other folders)
